--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="col-lg-5 order-lg-2">
                     <div class="hero-portrait">
                         <div class="pic" data-aos="fade-up" data-aos-delay="600">
-                            <img src="/assets/images/Ayyappa.png" alt="">
+                            <img src="./assets/images/Ayyappa.png" alt="">
                         </div>
                     </div>
                 </div>
