--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                             <div class="position-absolute top-0 end-0">
                                 <span class="badge">CLA</span>
                             </div>
-                            <img src="./assets/imageS/CLA.png" class="card-img-top banner" alt="Best Discord Banners and GIFs">
+                            <img src="./assets/images/CLA.png" class="card-img-top banner" alt="Best Discord Banners and GIFs">
                         </div>                        
                         <div class="card-body">
                             <h6 class="card-title">C - Cisco</h6>
@@ -496,7 +496,7 @@
                             <div class="position-absolute top-0 end-0">
                                 <span class="badge">CPA</span>
                             </div>
-                            <img src="./assets/imageS/CPA.png" class="card-img-top banner" alt="Best Discord Banners and GIFs">
+                            <img src="./assets/images/CPA.png" class="card-img-top banner" alt="Best Discord Banners and GIFs">
                         </div>                        
                         <div class="card-body">
                             <h6 class="card-title">C++ - Cisco</h6>
@@ -509,7 +509,7 @@
                             <div class="position-absolute top-0 end-0">
                                 <span class="badge">ServiceNow</span>
                             </div>
-                            <img src="./assets/imageS/ServiceNow.png" class="card-img-top banner" alt="Best Discord Banners and GIFs">
+                            <img src="./assets/imageS/Servicenow.png" class="card-img-top banner" alt="Best Discord Banners and GIFs">
                         </div>                        
                         <div class="card-body">
                             <h6 class="card-title">Micro Certification - ServiceNow</h6>
