--- a/index.html
+++ b/index.html
@@ -367,11 +367,11 @@
                                     <img src="./assets/images/projects/bikekart-icon.png" class="img-fluid icon" alt="BikeKart Template Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://ayyappareddynandipati.github.io/BikeKart/" class="card-title title" target="_blank">BikeKart</a>
+                                    <a href="https://bikekart.vercel.app/" class="card-title title" target="_blank">BikeKart</a>
                                     <p class="stacks m-0">HTML | CSS</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://ayyappareddynandipati.github.io/BikeKart/" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://bikekart.vercel.app/" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -380,7 +380,7 @@
                         </div>
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://ayyappareddynandipati.github.io/BikeKart/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://bikekart.vercel.app/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
                             <img src="./assets/images/projects/bikekart-banner.webp" class="card-img-top banner" alt="BikeKart Banner">
                         </div>
