--- a/index.html
+++ b/index.html
@@ -339,11 +339,11 @@
                                     <img src="./assets/images/projects/Trendora1.png" class="img-fluid icon" alt="Trendora Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://Trendora.com/" class="card-title title" target="_blank">Trendora</a>
-                                    <p class="stacks m-0">HTML | CSS | JS + NodeJS</p>
+                                    <a href="https://trendora-pi.vercel.app/" class="card-title title" target="_blank">Trendora</a>
+                                    <p class="stacks m-0">HTML | CSS | JS </p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://Trendora.com/" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://trendora-pi.vercel.app/" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                         </div>
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://Trendora.com/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://trendora-pi.vercel.app/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
                             <img src="./assets/images/projects/Trendora1.png" class="card-img-top banner" alt="Trendora Banner">
                         </div>
