--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <a href="https://codechef.com/users/ayyappa4512" target="_blank" data-aos="fade-up" data-aos-delay="100"><span class="simple-icons--codechef"></span></a> 
                         <a href="https://www.hackerrank.com/profile/ayyappareddy_n" target="_blank" data-aos="fade-up" data-aos-delay="100"><span class="la--hackerrank"></span></a>
                         <div class="d-flex call-to-action">
-                        <a href="mailto:ayyappareddynandipati" data-aos="fade-up" data-aos-delay="100"><button type="button" class="btn me-4 primary-bg-btn"><i class="bi bi-envelope"></i> Contact Me</button></a>
+                        <a href="mailto:ayyappareddynandipati@gmail.com" data-aos="fade-up" data-aos-delay="100"><button type="button" class="btn me-4 primary-bg-btn"><i class="bi bi-envelope"></i> Contact Me</button></a>
                         <a download="ayyappareddynandipati_resume.pdf" href="assets/Ayyappareddynandipati_resume.pdf" data-aos="fade-up" data-aos-delay="100">
                             <button type="button" class="btn btn-light secondary-bg-btn">
                               Resume <i class="bi bi-arrow-up-right-circle"></i>
