--- a/index.html
+++ b/index.html
@@ -359,6 +359,34 @@
                     </div>
                 </div>
 
+                                <div class="col-lg-4 col-md-6">
+                    <div class="card project-card">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center">
+                                <div class="col-2">
+                                    <img src="./assets/images/projects/2048logo.png" class="img-fluid icon" alt="2048 Logo">
+                                </div>
+                                <div class="col-7 p-0">
+                                    <a href="https://2048-sage-sigma.vercel.app/" class="card-title title" target="_blank">Game 2048</a>
+                                    <p class="stacks m-0">HTML | CSS | JS </p>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <a href="https://2048-sage-sigma.vercel.app//" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description-container">
+                            <p class="description">Game 2048: Fun and addictive puzzle game where you combine numbered tiles to reach the 2048 tile.</p>
+                        </div>
+                        <div class="banner-container">
+                            <div class="overlay">
+                                <a href="https://2048-sage-sigma.vercel.app/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                            </div>
+                            <img src="./assets/images/projects/2048.png" class="card-img-top banner" alt="2048 Banner">
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="col-lg-4 col-md-6">
                     <div class="card project-card">
                         <div class="card-body">
@@ -383,34 +411,6 @@
                                 <a href="https://bikekart.vercel.app/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
                             <img src="./assets/images/projects/bikekart-banner.webp" class="card-img-top banner" alt="BikeKart Banner">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="card project-card cursor-not-allowed">
-                        <div class="card-body ">
-                            <div class="d-flex align-items-center">
-                                <div class="col-2">
-                                    <img src="./assets/images/projects/PTI.png" class="img-fluid icon" alt="PeriodicTable Icon">
-                                </div>
-                                <div class="col-7 p-0">
-                                    <span class="card-title title">Periodic Table</span>
-                                    <p class="stacks m-0">HTML | CSS</p>
-                                </div>
-                                <div class="col-3 align-middle">
-                                    <button class="btn btn-sm in-progress cursor-not-allowed">In Progress</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="description-container">
-                            <p class="description">Tired of knowing periodic elements manually?It is best and faster solution.</p>
-                        </div>
-                        <div class="banner-container cursor-not-allowed">
-                            <div class="overlay">
-                                <i class="bi bi-hourglass-split"></i>
-                            </div>
-                            <img src="./assets/images/projects/PT.png" class="card-img-top banner" alt="PeriodicTable Banner">
                         </div>
                     </div>
                 </div>
