--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/2048logo.png" class="img-fluid icon" alt="2048 Logo">
+                                    <img src="./assets/images/projects/2048logo.ico" class="img-fluid icon" alt="2048 Logo">
                                 </div>
                                 <div class="col-7 p-0">
                                     <a href="https://2048-sage-sigma.vercel.app/" class="card-title title" target="_blank">Game 2048</a>
