--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
                 </div>
                 <div class="col">
                     <div class="skill">
+                        <img class="skill-image" src="./assets/images/skills/react.jpg" alt="ReactJS">
+                        <p class="skill-name">ReactJS</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="skill">
                         <img class="skill-image" src="./assets/images/skills/sql.svg" alt="SQL">
                         <p class="skill-name">SQL</p>
                     </div>
