--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="./assets/images/skills/react.jpg" alt="ReactJS">
+                        <img class="skill-image" src="./assets/images/skills/reactjs.svg" alt="ReactJS">
                         <p class="skill-name">ReactJS</p>
                     </div>
                 </div>
