--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <a href="https://github.com/ayyappareddynandipati" target="_blank" class="github" data-aos="fade-up" data-aos-delay="100"><i class="bi bi-github"></i></a>
                         <a href="https://www.instagram.com/ayyappareddynandipati/" target="_blank" class="instagram" data-aos="fade-up" data-aos-delay="100"><i class="bi bi-instagram"></i></a>
                         <a href="https://www.youtube.com/@ayyappareddynandipati/" target="_blank" class="youtube" data-aos="fade-up" data-aos-delay="100"><i class="bi bi-youtube"></i></a>
-                        <a href="https://leetcode.com/u/ayyappa4512" target="_blank" data-aos="fade-up" data-aos-delay="100"><span class="simple-icons--leetcode"></span></a>
+                        <a href="https://leetcode.com/u/ayyappareddynandipati" target="_blank" data-aos="fade-up" data-aos-delay="100"><span class="simple-icons--leetcode"></span></a>
                         <a href="https://codechef.com/users/ayyappa4512" target="_blank" data-aos="fade-up" data-aos-delay="100"><span class="simple-icons--codechef"></span></a> 
                         <a href="https://www.hackerrank.com/profile/ayyappareddy_n" target="_blank" data-aos="fade-up" data-aos-delay="100"><span class="la--hackerrank"></span></a>
                         <div class="d-flex call-to-action">
