--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.min.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet"/>
 
-  <script type="module" src="/preview-inject/index.ts"></script>
+<!--   <script type="module" src="/preview-inject/index.ts"></script> -->
   </head>
   <body>
     <div id="root"></div>
